mines now generate

--- a/src/main/resources/style/minefield.css
+++ b/src/main/resources/style/minefield.css
@@ -18,5 +18,9 @@
 }
 
 .marked-field{
-    -fx-background-image: url("/marked.jpg");
+    -fx-background-image: url("/marked.png");
+}
+
+.mine{
+    -fx-background-image: url("/mine.png");
 }
